--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#ff994a</color>
+    <color name="colorPrimaryDark">#ff7c17</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="editBg">#fff</color>
+    <color name="hint">#C5C5C5</color>
+    <color name="blk">#2E2E2E</color>
+    <color name="error">#FF0000</color>
 </resources>
